--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,14 +1,18 @@
-name: ci
+name: Docker Build and Push
 
 on:
   push:
-    branches:
-      - 'master'
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
-  docker:
+  build:
     runs-on: ubuntu-latest
     steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v2
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -23,11 +27,13 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Build and push
-        id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64
           push: true
-          tags: user/app:latest
+          tags: matthiasknight/python-helloworld:latest
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
